1998-12-16  Evan Lawrence <evan@worldpath.net>

	* xpm/tb*.xpm: Reduced all the toolbar xpms to 8 colors
	  apiece, to reduce the load time.

	* src/toolbar.c: Further cleanups to the toolbar code, getting
	  it to resize properly, etc.

	* src/gE_prefslib.c: Fixed one or two bugs in it. I forget
	  what they were ATM :)

	* src/gE_prefs_box.c: Fixed it so the OK button works properly in
	  the GTK-only version now.

	* THANKS: Added Christopher (raistlinn) to it, for his help
	  yesterday.

	* gedit.spec: Updated this for 0.4.8.

	* src/gE_document.c: Bug fixes so the prefernces load properly in
	  the gnome version now. Also fixed some resize problems that were
	  bugging me in the gtk-only version.

	* src/commands.c: Another bug fix, this time to keep the recent
	  documents from overwriting Exit... This was a bug I introduced in one
	  of my recent commits.

1998-12-15  Alex Roberts <bse@dial.pipex.com>

	* gedit.keys: new file, for mime stuff...

1998-12-13  Evan Lawrence <evan@worldpath.net>
	
	* src/commands.c:
	  src/gE_document.c:
	  src/gE_files.c:
	  src/gE_prefslib.c
	  src/gedit.c:
	  src/search.c: Fixed mem leaks, free mem reads, etc that yosh
	  found with purify. Thanks man! :) There are still some mem leaks
	  in plugin.c, and gE_plugin_api.c that Chris and I, respectively,
	  need to fix.  If people could test the changes out to verify
	  I didn't break anything, that would be great.

Sat Dec 12 21:08:14 PST 1998 Manish Singh <yosh@gimp.org>

	* src/plugin.c: correct off-by-one error in argv[0] allocation

1998-12-12  Evan Lawrence <evan@worldpath.net>

	* src/commands.c: Fixed bug wherein the first window would be hidden
	  when you tried to close the second one.
	
	* src/menus.c: Changed File->Quit to File->Exit to be SG compliant.
	
	* KNOWNBUGS: Updated it to reflect recent changes.

1998-12-11  Evan Lawrence <evan@worldpath.net>

	* src/commands.c:
	  src/search.c:
	  src/gE_print.c: Fixed up some dialogs to use gnome_dialog if gnome