@@ -1,5 +1,9 @@
 1998-12-16  Evan Lawrence <evan@worldpath.net>
 
+	* src/gedit.c: Ditched all the signal handling crap.
+
+1998-12-16  Evan Lawrence <evan@worldpath.net>
+
 	* xpm/tb*.xpm: Reduced all the toolbar xpms to 8 colors
 	  apiece, to reduce the load time.
 
